2006-04-19  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditPrimary.py (EditPrimary.build_window_key):
	Always have a window key, even if there is no handle.
	* src/Editors/_EditFamily.py (EditFamily.build_menu_names):
	Properly set up menu labels.
	* src/Utils.py (family_name): Add optional argument.

2006-04-19  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ImportGeneWeb.py: Use new type classes;
	Start of parsing relationships (unfinished)

2006-04-19  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: use correct field for building
	surname key

2006-04-19  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_DbUtils.py: fix handle vs. ref issues
	* src/RelLib/_Family.py: add remove_child_handle
	* src/DataViews/_EventView.py: more GrampsTypes changes
	* src/DataViews/_PedigreeView.py: more GrampsTypes changes
	* src/RelLib/_ChildRef.py: more GrampsTypes changes
	* src/RelLib/_Family.py: more GrampsTypes changes
	* src/RelLib/_Repository.py: more GrampsTypes changes
	* src/RelLib/_Event.py: more GrampsTypes changes
	* src/Editors/_EditPerson.py: more GrampsTypes changes
	* src/Editors/_EditEventRef.py: more GrampsTypes changes
	* src/Editors/_EditEvent.py: more GrampsTypes changes
	* src/PeopleModel.py: more GrampsTypes changes
	* src/DisplayTabs.py: more GrampsTypes changes
	* src/GrampsWidgets.py: more GrampsTypes changes
	* src/Utils.py: more GrampsTypes changes
	* src/PageView.py: more GrampsTypes changes

2006-04-19  Alex Roitman  <shura@gramps-project.org>
	* src/Utils.py: Remove obsolete code.
	* src/DisplayTabs.py (EventRefModel.column_role): Adapt to new types.
	* src/PeopleModel.py: Adapt to new types.
	* src/plugins/TestcaseGenerator.py: Adapt to new types.
	* src/RelLib/Makefile.am: Ship new files.
	* src/RelLib/_EventRef.py: Adapt to new types.
	* src/RelLib/_PrimaryObject.py: Adapt to new types.
	* src/RelLib/_EventRoleType.py: Add new module.
	* src/RelLib/_RepoRef.py: Adapt to new types.