@@ -75,7 +75,7 @@ class Repository(PrimaryObject,NoteBase,AddressBase,UrlBase):
         (self.handle, self.gramps_id, the_type, self.name, note,
          address_list, urls ,self.marker, self.private) = data
 
-        self.type = RepositoryType(the_type)
+        self.type.unserialize(the_type)
         NoteBase.unserialize(self,note)
         AddressBase.unserialize(self,address_list)
         UrlBase.unserialize(self,urls)
